--- a/index.html
+++ b/index.html
@@ -1,10 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/styles.css">
-	<title>Document</title>
-</head>
-<body>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/styles.css">
+		<title>Display Grid</title>
+	</head>
+	<body>
+		<section>
+			<div class="grid">
+				<div class="image-box v1">
+					<img src="img/abandoned-architecture-art-6188.jpg" alt="">
+				</div>
+				<div class="text-box v1">
+					<h1>Lorem ipsum dolor sit.</h1>
+					<h2>Lorem ipsum dolor.</h2>
+					<div class="events">
+						<div class="event">
+							<div class="event__number">2</div>
+							<div class="event__langs event__langs--column">
+								<div class="event__lang">мистецк рез</div>
+								<div class="event__lang">art resid</div>
+							</div>
+						</div>
+						<div class="event">
+							<div class="event__number">1</div>
+							<div class="event__langs event__langs--column">
+								<div class="event__lang">граф фест</div>
+								<div class="event__lang">graf festival</div>
+							</div>
+						</div>
+						<div class="event">
+							<div class="event__number">9</div>
+							<div class="event__langs">
+								<div class="event__lang">подii про мистецтв</div>
+								<div class="event__lang">art events</div>
+							</div>
+						</div>
+						<div class="event">
+							<div class="event__number">14</div>
+							<div class="event__langs">
+								<div class="event__lang">лекцii курс</div>
+								<div class="event__lang">lectures discus</div>
+							</div>
+						</div>
+						<div class="event">
+							<div class="event__number">1</div>
+							<div class="event__langs event__langs--column">
+								<div class="event__lang">iнтер в простор</div>
+								<div class="event__lang">intervention urban space</div>
+							</div>
+						</div>
+					</div>
+				</div>
+		</section>
+		<section class="grid">
+			<div class="image-box v2">
+					<img src="img/abandoned-art-building-162379.jpg" alt="">
+				</div>
+			<div class="image-box v3">
+					<img src="img/art-artistic-graffiti-1707640.jpg" alt="">
+			</div>
+			<div class="text-box v2">
+					<h1>Lorem ipsum dolor sit.</h1>
+					<h2>Lorem ipsum dolor.</h2>
+					<div class="events">
+						<div class="event">
+							<div class="event__number">47</div>
+							<div class="event__langs">
+								<div class="event__lang">Lorem ipsum dolor sit amet.</div>
+								<div class="event__lang">Lorem ipsum dolor sit amet.</div>
+							</div>
+						</div>
+						<div class="event">
+							<div class="event__number">12</div>
+							<div class="event__langs">
+								<div class="event__lang">Lorem ipsum dolor sit amet, consectetur.</div>
+								<div class="event__lang">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
+							</div>
+					</div>
+				</div>	
+		</section>
+		<section class="grid">
+			<div class="image-box v4">
+					<img src="img/art-artistic-brickwall-1137752.jpg" alt="">
+				</div>
+			<div class="image-box v5">
+					<img src="img/art-basketball-basket-basketball-court-1045534.jpg" alt="">
+			</div>
+			<div class="image-box v6">
+					<img src="img/art-artistic-brickwall-1137752.jpg" alt="">
+			</div>
+			<div class="text-box v3">
+					<h1>Lorem ipsum dolor sit.</h1>
+					<h2>Lorem ipsum dolor.</h2>
+					<div class="events">
+						<div class="event">
+							<div class="event__number">2</div>
+							<div class="event__langs event__langs--column">
+								<div class="event__lang">мистецк рез</div>
+								<div class="event__lang">art resid</div>
+							</div>
+						</div>
+						<div class="event">
+							<div class="event__number">1</div>
+							<div class="event__langs event__langs--column">
+								<div class="event__lang">граф фест</div>
+								<div class="event__lang">graf festival</div>
+							</div>
+						</div>
+						<div class="event">
+							<div class="event__number">1</div>
+							<div class="event__langs event__langs--column">
+								<div class="event__lang">iнтер в простор</div>
+								<div class="event__lang">intervention urban space</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+		</section>
+		</div>
+	</body>
 </html>
